--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 cssselect==1.2.0
+dnspython==2.3.0
 exceptiongroup==1.1.1
 feedfinder2==0.0.4
 feedparser==6.0.10
 filelock==3.12.0
 Flask==2.3.2
+Flask-PyMongo==2.3.0
 frozenlist==1.3.3
 greenlet==2.0.2
 h11==0.14.0
@@ -33,6 +35,7 @@ openai==0.27.6
 outcome==1.2.0
 Pillow==9.5.0
 pyahocorasick==2.0.0
+pymongo==4.3.3
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
